@@ -1,5 +1,16 @@
 2004-02-11  David Schleef  <ds@schleef.org>
 
+	* ext/lcs/gstcolorspace.c: (colorspace_find_lcs_format),
+	(gst_colorspace_caps_get_fourcc), (colorspace_setup_converter),
+	(gst_colorspace_getcaps), (gst_colorspace_link),
+	(gst_colorspace_base_init), (gst_colorspace_init),
+	(gst_colorspace_chain), (gst_colorspace_change_state),
+	(plugin_init): Merge Ronald's patch (bug #117897) and update
+	for new caps and negotiation.  Seems to work, although it
+	shows off bugs in lcs.
+
+2004-02-11  David Schleef  <ds@schleef.org>
+
 	* ext/alsa/Makefile.am: Fix linking against libgstinterfaces.
 	(bug #133886)  Noticed by bugs@leroutier.net (Stephane LOEUILLET)
 
